--- a/index.html
+++ b/index.html
@@ -5,18 +5,18 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="description du site" />
-	<meta name="author" content="Gauvin Jonathan" />
+	<meta name="description" content="Portfolio de teddy equerre" />
+	<meta name="author" content="Equerre Teddy" />
 	<meta property="og:description" content="description du site">
 	<meta property="og:type" content="website">
 	<meta property="og:locale" content="fr_FR">
 	<meta property="og:title" content="Accueil">
 	<meta property="og:site_name" content="name site">
-	<meta property="og:image" content="/img/logo/logo.png">
+	<meta property="og:image" content="/img/logo.svg">
 	<link rel="stylesheet" href="css/style.css" onload="if(media!='all')media='all'">
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
-	<link rel="icon" href="img/logo/logo.ico">
-	<title>Titre de la page</title>
+	<link rel="icon" href="img/logo.svg">
+	<title>Ty developper</title>
 </head>
 
 <body id="Body">
