ajout du html header mobile

--- a/index.html
+++ b/index.html
@@ -21,8 +21,27 @@
 
 <body id="Body">
 	<!-- Header -->
-	<header>
-
+	<header class="header">
+<div class="header__icon">
+	<img src="./img/icon/menu.svg" alt="bouton pour ouvrir le menue" width="49" height="49" >
+</div>
+<nav class="header__nav">
+	<img src="./img/logo.svg" alt="logo du site" width="195" height="41px" loading="lazy">
+	<ul class="header__nav-list">
+		<li><a href="#">Accueil</a></li>
+		<li><a href="#">Portfolio</a></li>
+		<li><a href="#">Service</a></li>
+		<li><a href="#">Blog</a></li>
+	</ul>
+<div class="header__nav-reseaux">
+<a href="https://www.instagram.com/tydevelopper/">
+	<img src="./img/reseau/linkedin.svg" alt="icon linkedin" width="22" height="22">
+	<img src="./img/reseau/github.svg" alt="icon github" width="22" height="22">
+	<img src="./img/reseau/instagram.svg" alt="icon instagram" width="22" height="22">
+	<img src="./img/reseau/twitch.svg" alt="icon twitch" width="22" height="22">
+</a>
+</div>
+</nav>
 	</header>
 	<!-- Main -->
 	<main id="App">
