ajout du background page accueil et du html

--- a/index.html
+++ b/index.html
@@ -56,8 +56,22 @@
 				</div>
 				</nav>
 			</div>
-			
 				</header>
+				<section class=" test backgroundGradient">
+					<div class="home max-w">
+						<div class="home__info">
+							<h1 class="titel">Bienvenue chez TY <span style=" color:var(--txt-secondary-color);">Developper</span></h1>
+								<p>On vous accompagne de la recherche d’idée à la conception de vos sites web.</p>
+								<button class="btn">
+									 <p>Voir mes projets</p>
+									 <img src="" alt="">
+									</button>
+						</div>
+						<div class="home__img">
+							<img src="./img/Illustration.png" alt="Ilustration acceuil" width="350" height="601">
+						</div>
+					</div>
+				</section>
 	</main>
 
 	<footer>
