ajout page portfolio

--- a/index.html
+++ b/index.html
@@ -57,18 +57,40 @@
 				</nav>
 			</div>
 				</header>
-				<section class=" test backgroundGradient">
-					<div class="home max-w">
+				<section class="backgroundGradient">
+					<div class="home max-w padding">
 						<div class="home__info">
-							<h1 class="titel">Bienvenue chez TY <span style=" color:var(--txt-secondary-color);">Developper</span></h1>
-								<p>On vous accompagne de la recherche d’idée à la conception de vos sites web.</p>
-								<button class="btn">
+							<h1 class="titel home__info-titel"style="color: var(--txt-primary-color)">
+								Bienvenue chez TY
+								<span style=" color:var(--txt-secondary-color)">
+									Developper
+								</span>
+							</h1>
+								<p class="home__info-txt paragraph">On vous accompagne de la recherche d’idée à la conception de vos sites web.</p>
+								<button class="btn btn-primary">
 									 <p>Voir mes projets</p>
 									 <img src="" alt="">
 									</button>
 						</div>
 						<div class="home__img">
-							<img src="./img/Illustration.png" alt="Ilustration acceuil" width="350" height="601">
+							<img src="./img/Illustration.png" alt="Ilustration acceuil" width="141" height="242">
+						</div>
+					</div>
+				</section>
+				<!-- portfolio -->
+				<section class="backgroundGradient">
+					<div class="portfolio padding">
+						<h2 class="titleSmall margin-txt" style="color: var(--txt-primary-color)">Réalisations</h2>
+						<div class="portfolio__content">
+							<span>
+								<img src="img/Frame 7.png" alt="" width="289" height="199">
+							</span>
+							<span>
+								<img src="img/Frame 7.png" alt="" width="289" height="199">
+							</span>
+							<span>
+								<img src="img/Frame 7.png" alt="" width="289" height="199">
+							</span>
 						</div>
 					</div>
 				</section>
