ajout des pages info et service html

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 				</nav>
 			</div>
 				</header>
-				<section class="backgroundGradient">
+				<section class=" section-home backgroundGradient">
 					<div class="home max-w padding">
 						<div class="home__info">
 							<h1 class="titel home__info-titel"style="color: var(--txt-primary-color)">
@@ -80,7 +80,7 @@
 				<!-- portfolio -->
 				<section class="backgroundGradient">
 					<div class="portfolio padding">
-						<h2 class="titleSmall margin-txt" style="color: var(--txt-primary-color)">Réalisations</h2>
+						<h2 class="titelMedium margin-txt" style="color: var(--txt-primary-color)">Réalisations</h2>
 						<div class="portfolio__content">
 							<span>
 								<img src="img/Frame 7.png" alt="" width="289" height="199">
@@ -91,9 +91,61 @@
 							<span>
 								<img src="img/Frame 7.png" alt="" width="289" height="199">
 							</span>
+							<a href="#" class="btn" style="background-color: var(--background-btn-color);"><p>Voir tout les projets</p> <img src="img/icon/exit.svg" alt="" width="20" height="20"></a>
 						</div>
 					</div>
 				</section>
+				<section class="info">
+					<h2 class="titelMedium margin-txt" style="color:var(--txt-primary-color);">Qui suis-Je ?</h2>
+					<div class="info__img">
+							<img src="img/Illustration.png" alt="Ilustration de Teddy Equerre" width="135" height="231">
+					</div>
+					<div class="info__txt">
+						<h3 class="titleSmall margin-txt" style="color:var(--txt-primary-color);"><span>Ty</span>developper</h3>
+						<p>Originaire de l’île de la réunion j’ai décidé de me former via des formations de développeur web et web designer. Suite à cela je me suis lancé en free-lance.
+							Je partage souvent ma passion lors de mes live <a href="#">Twitch</a> .
+							</p>
+							<h3>Mon métier consiste à</h3>
+							<p>Concevoir des maquettes graphiques et de les intégrer dans un site web.</p>
+							<a href="#" class="btn" style="background-color: var(--background-btn-color);"><p>Télécharger CV</p><img src="img/icon/dowload.svg" alt="" width="20" height="18"></a>
+					</div>
+					</section>
+					<section class="backgroundGradient">
+						<div class=" services padding">
+							<h3 class="titleSmall margin-txt" style="color:var(--txt-primary-color);">Mes services</h3>
+							<div class="services__content">
+								<!-- card developper -->
+								<div class="card">
+									<div class="card__img primary">
+										<img src="img/icon/dev.svg" alt="" width="60" height="60">
+									</div>
+									<h3 class="card__tilte titleSmall" style="color:var(--txt-primary-color);">Développement web</h3>
+									<p class="card__info paragraph" style="color:var(--txt-primary-color);">Programmation de la partie visible de l’interface utilisateur ou d’un site web.</p>
+								</div>
+								<!-- card designer -->
+								<div class="card">
+									<div class="card__img secondary">
+										<img  src="img/icon/design.svg" alt="" width="60" height="60">
+									</div>
+									<h3 class="card__tilte titleSmall" style="color:var(--txt-primary-color);">Designer web</h3>
+									<p class="card__info paragraph" style="color:var(--txt-primary-color);">Création de maquette sur mesure en utilisant un outil de design qui se nomme Figma.</p>
+								</div>
+								<!-- card responsive -->
+								<div class="card">
+									<div class="card__img thirdary">
+										<img src="img/icon/responsive.svg" alt="" width="60" height="60">
+									</div>
+									<h3 class="card__tilte titleSmall" style="color:var(--txt-primary-color);">Responsive design web</h3>
+									<p class="card__info paragraph" style="color:var(--txt-primary-color);">Compatibilité des sites web sur PC, tablette et mobile</p>
+								</div>
+							</div>
+						</div>
+					</section>
+					<!-- methode -->
+					<section class="method">
+						
+
+					</section>
 	</main>
 
 	<footer>
