--- a/index.html
+++ b/index.html
@@ -91,23 +91,27 @@
 							<span>
 								<img src="img/Frame 7.png" alt="" width="289" height="199">
 							</span>
-							<a href="#" class="btn" style="background-color: var(--background-btn-color);"><p>Voir tout les projets</p> <img src="img/icon/exit.svg" alt="" width="20" height="20"></a>
+							<a href="#" class="btn btn-primary portfolio__btn" style="background-color: var(--background-btn-color);"><p>Voir tout les projets</p> <img src="img/icon/exit.svg" alt="" width="20" height="20"></a>
 						</div>
 					</div>
 				</section>
-				<section class="info">
-					<h2 class="titelMedium margin-txt" style="color:var(--txt-primary-color);">Qui suis-Je ?</h2>
-					<div class="info__img">
-							<img src="img/Illustration.png" alt="Ilustration de Teddy Equerre" width="135" height="231">
-					</div>
-					<div class="info__txt">
-						<h3 class="titleSmall margin-txt" style="color:var(--txt-primary-color);"><span>Ty</span>developper</h3>
-						<p>Originaire de l’île de la réunion j’ai décidé de me former via des formations de développeur web et web designer. Suite à cela je me suis lancé en free-lance.
-							Je partage souvent ma passion lors de mes live <a href="#">Twitch</a> .
-							</p>
-							<h3>Mon métier consiste à</h3>
-							<p>Concevoir des maquettes graphiques et de les intégrer dans un site web.</p>
-							<a href="#" class="btn" style="background-color: var(--background-btn-color);"><p>Télécharger CV</p><img src="img/icon/dowload.svg" alt="" width="20" height="18"></a>
+				<section class="backgroundGradient" >
+					<div class="info padding">
+						<h2 class="titelMedium margin-txt" style="color:var(--txt-primary-color);">Qui suis-Je ?</h2>
+						<div class="info__img">
+								<img src="img/Illustration.png" alt="Ilustration de Teddy Equerre" width="135" height="231">
+						</div>
+						<div class="info__txt">
+							<h3 class="titleSmall " style="color:var(--txt-primary-color);"><span style="color: var(--txt-secondary-color);">Ty</span>developper</h3>
+							<p class="paragraph">Originaire de l’île de la réunion j’ai décidé de me former via des formations de développeur web et web designer. Suite à cela je me suis lancé en free-lance.
+								Je partage souvent ma passion lors de mes live <a href="#" style="color: var(--txt-secondary-color);">Twitch</a> .
+								</p>
+							</div>
+							<div class="info__txt">
+								<h3 class="titleSmall" style="color:var(--txt-primary-color);">Mon métier consiste à</h3>
+								<p class="paragraph">Concevoir des maquettes graphiques et de les intégrer dans un site web.</p>
+							</div>
+							<a href="#" class="btn btn-primary" style="background-color: var(--background-btn-color);"><p>Télécharger CV</p><img src="img/icon/dowload.svg" alt="" width="20" height="18"></a>
 					</div>
 					</section>
 					<section class="backgroundGradient">
@@ -143,9 +147,27 @@
 					</section>
 					<!-- methode -->
 					<section class="method">
-						
 
 					</section>
+					<footer>
+						<div class="footer padding">
+							<img src="img/logo.svg" alt="logo entreprise" width="256" height="54">
+							<ul class="footer__menu">
+								<li><a class="links" style="color: var(--txt-primary-color);" href="#">Accueil</a></li>
+								<li><a class="links" style="color: var(--txt-primary-color);" href="#">Portfolio</a></li>
+								<li><a class="links" style="color: var(--txt-primary-color);" href="#">Services</a></li>
+								<li><a class="links" style="color: var(--txt-primary-color);" href="#">Contact</a></li>
+							</ul>
+							<div class="footer__reseaux">
+								<span><a href="#"><img src="img/reseau/instagram.svg" alt="" width="22" height="22"></a></span>
+								<span><a href="#"><img src="img/reseau/github.svg" alt="" width="22" height="22"></a></span>
+								<span><a href="#"><img src="img/reseau/linkedin.svg" alt="" width="22" height="22"></a></span>
+								<span><a href="#"><img src="img/reseau/twitch.svg" alt="" width="22" height="22"></a></span>
+							</div>
+							<hr class="footer__hr" style="color: var(--border-color);">
+							<p class="footer__copy paragraph">Copyright Equerre Teddy - 2022</p>
+						</div>
+					</footer>
 	</main>
 
 	<footer>
