add contact mobile page

--- a/index.html
+++ b/index.html
@@ -147,8 +147,28 @@
 					</section>
 					<!-- methode -->
 					<section class="method">
-
 					</section>
+					<section>
+						<div class="contact padding">
+							<h2 class="titleSmall margin-txt" style="color: var(--txt-primary-color);">Vous voulez lancer un projet ?</h2>
+							<form class="contact__form" action="">
+								<div class="contact-input">
+									<p class="paragraph">Nom</p>
+									<input class="input" type="text" placeholder="Entrer votre nom">
+								</div>
+								<div class="contact-input">
+									<p class="paragraph">E-Mail</p>
+									<input class="input" type="text" placeholder="Entrer votre nom">
+								</div>
+								<div class="contac-input">
+									<p class="paragraph">Message</p>
+									<textarea class="input textarea" name="" id="" cols="30" rows="10" placeholder="Votre message"></textarea>
+								</div>
+								<input class="btn btn-primary" type="submit" value="Envoyer">
+							</form>
+						</div>
+					</section>
+					<!-- footer -->
 					<footer>
 						<div class="footer padding">
 							<img src="img/logo.svg" alt="logo entreprise" width="256" height="54">
