start responsive tablette

--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
 					</div>
 				</section>
 				<section class="backgroundGradient" >
-					<div class="info padding">
-						<h2 class="titelMedium margin-txt" style="color:var(--txt-primary-color);">Qui suis-Je ?</h2>
+					<h2 class="titelMedium margin-txt" style="color:var(--txt-primary-color);">Qui suis-Je ?</h2>
+					<div class="info padding max-w">
 						<div class="info__img">
 								<img src="img/Illustration.png" alt="Ilustration de Teddy Equerre" width="135" height="231">
 						</div>
@@ -106,16 +106,14 @@
 							<p class="paragraph">Originaire de l’île de la réunion j’ai décidé de me former via des formations de développeur web et web designer. Suite à cela je me suis lancé en free-lance.
 								Je partage souvent ma passion lors de mes live <a href="#" style="color: var(--txt-secondary-color);">Twitch</a> .
 								</p>
-							</div>
-							<div class="info__txt">
 								<h3 class="titleSmall" style="color:var(--txt-primary-color);">Mon métier consiste à</h3>
 								<p class="paragraph">Concevoir des maquettes graphiques et de les intégrer dans un site web.</p>
+								<a href="#" class="btn btn-primary" style="background-color: var(--background-btn-color);"><p>Télécharger CV</p><img src="img/icon/dowload.svg" alt="" width="20" height="18"></a>
 							</div>
-							<a href="#" class="btn btn-primary" style="background-color: var(--background-btn-color);"><p>Télécharger CV</p><img src="img/icon/dowload.svg" alt="" width="20" height="18"></a>
 					</div>
 					</section>
 					<section class="backgroundGradient">
-						<div class=" services padding">
+						<div class=" services padding max-w">
 							<h3 class="titleSmall margin-txt" style="color:var(--txt-primary-color);">Mes services</h3>
 							<div class="services__content">
 								<!-- card developper -->
@@ -150,7 +148,7 @@
 					</section>
 					<section>
 						<div class="contact padding">
-							<h2 class="titleSmall margin-txt" style="color: var(--txt-primary-color);">Vous voulez lancer un projet ?</h2>
+							<h2 class="titelMedium margin-txt" style="color: var(--txt-primary-color);">Vous voulez lancer un projet ?</h2>
 							<form class="contact__form" action="">
 								<div class="contact-input">
 									<p class="paragraph">Nom</p>
