start resposive pc

--- a/index.html
+++ b/index.html
@@ -67,10 +67,7 @@
 								</span>
 							</h1>
 								<p class="home__info-txt paragraph">On vous accompagne de la recherche d’idée à la conception de vos sites web.</p>
-								<button class="btn btn-primary">
-									 <p>Voir mes projets</p>
-									 <img src="" alt="">
-									</button>
+								<a class="btn btn-primary home__btn" href="#">Voir projets</a>
 						</div>
 						<div class="home__img">
 							<img src="./img/Illustration.png" alt="Ilustration acceuil" width="141" height="242">
@@ -91,8 +88,8 @@
 							<span>
 								<img src="img/Frame 7.png" alt="" width="289" height="199">
 							</span>
-							<a href="#" class="btn btn-primary portfolio__btn" style="background-color: var(--background-btn-color);"><p>Voir tout les projets</p> <img src="img/icon/exit.svg" alt="" width="20" height="20"></a>
 						</div>
+						<a href="#" class="btn btn-primary portfolio__btn" style="background-color: var(--background-btn-color);"><p>Voir tout les projets</p> <img src="img/icon/exit.svg" alt="" width="20" height="20"></a>
 					</div>
 				</section>
 				<section class="backgroundGradient" >
@@ -108,13 +105,14 @@
 								</p>
 								<h3 class="titleSmall" style="color:var(--txt-primary-color);">Mon métier consiste à</h3>
 								<p class="paragraph">Concevoir des maquettes graphiques et de les intégrer dans un site web.</p>
-								<a href="#" class="btn btn-primary" style="background-color: var(--background-btn-color);"><p>Télécharger CV</p><img src="img/icon/dowload.svg" alt="" width="20" height="18"></a>
+								<a href="#" class="btn btn-primary info__btn" style="background-color: var(--background-btn-color);"><p>Télécharger CV</p><img src="img/icon/dowload.svg" alt="" width="20" height="18"></a>
 							</div>
+
 					</div>
 					</section>
 					<section class="backgroundGradient">
 						<div class=" services padding max-w">
-							<h3 class="titleSmall margin-txt" style="color:var(--txt-primary-color);">Mes services</h3>
+							<h3 class="titelMedium margin-txt" style="color:var(--txt-primary-color);">Mes services</h3>
 							<div class="services__content">
 								<!-- card developper -->
 								<div class="card">
