fix bug header and padding for mobile and tablette and start pc scss

--- a/index.html
+++ b/index.html
@@ -41,7 +41,6 @@
 				<a href="https://www.instagram.com/tydevelopper/">
 					<img src="./img/reseau/instagram.svg" alt="icon instagram" width="22" height="22">
 				</a>
-				<!-- TODO:ajouter les liens -->
 				<a href="">
 					<img src="./img/reseau/github.svg" alt="icon github" width="22" height="22">
 				</a>
@@ -61,13 +60,13 @@
 					<div class="home max-w padding">
 						<div class="home__info">
 							<h1 class="titel home__info-titel"style="color: var(--txt-primary-color)">
-								Bienvenue chez TY
+								Bienvenue chez <br>TY
 								<span style=" color:var(--txt-secondary-color)">
 									Developper
 								</span>
 							</h1>
 								<p class="home__info-txt paragraph">On vous accompagne de la recherche d’idée à la conception de vos sites web.</p>
-								<a class="btn btn-primary home__btn" href="#">Voir projets</a>
+								<a class="btn btn-primary home__btn" href="#"> <p>Voir projets</p> <img src="img/icon/arrowRight.svg" alt=""> </a>
 						</div>
 						<div class="home__img">
 							<img src="./img/Illustration.png" alt="Ilustration acceuil" width="141" height="242">
@@ -92,10 +91,12 @@
 						<a href="#" class="btn btn-primary portfolio__btn" style="background-color: var(--background-btn-color);"><p>Voir tout les projets</p> <img src="img/icon/exit.svg" alt="" width="20" height="20"></a>
 					</div>
 				</section>
+				<!-- info -->
 				<section class="backgroundGradient" >
-					<h2 class="titelMedium margin-txt" style="color:var(--txt-primary-color);">Qui suis-Je ?</h2>
 					<div class="info padding max-w">
-						<div class="info__img">
+						<h2 class="titelMedium margin-txt" style="color:var(--txt-primary-color);">Qui suis-Je ?</h2>
+						<div class="info__content">
+							<div class="info__img">
 								<img src="img/Illustration.png" alt="Ilustration de Teddy Equerre" width="135" height="231">
 						</div>
 						<div class="info__txt">
@@ -108,6 +109,7 @@
 								<a href="#" class="btn btn-primary info__btn" style="background-color: var(--background-btn-color);"><p>Télécharger CV</p><img src="img/icon/dowload.svg" alt="" width="20" height="18"></a>
 							</div>
 
+						</div>
 					</div>
 					</section>
 					<section class="backgroundGradient">
