add pc scss and patch responsive bug

--- a/index.html
+++ b/index.html
@@ -31,32 +31,32 @@
 				<nav class="header__nav">
 					<img src="./img/logo.svg" alt="logo du site" width="195" height="41px" loading="lazy">
 					<ul class="header__nav-list">
-						<li><a class="links" href="#">Accueil</a></li>
-						<li><a class="links" href="#">Portfolio</a></li>
-						<li><a class="links" href="#">Service</a></li>
-						<li><a class="links" href="#">Blog</a></li>
+						<li><a class="links" href="#home">Accueil</a></li>
+						<li><a class="links" href="#portfolio">Portfolio</a></li>
+						<li><a class="links" href="#services">Services</a></li>
+						<li><a class="links" href="#contact">Contact</a></li>
 					</ul>
 				<div class="header__nav-reseaux">
 					<!-- instagram -->
 				<a href="https://www.instagram.com/tydevelopper/">
 					<img src="./img/reseau/instagram.svg" alt="icon instagram" width="22" height="22">
 				</a>
-				<a href="">
+				<a href="https://github.com/maakino">
 					<img src="./img/reseau/github.svg" alt="icon github" width="22" height="22">
 				</a>
 				<!-- linkedin -->
-				<a href="">
+				<a href="https://www.linkedin.com/in/teddy-equerre-514a781a2/">
 					<img src="./img/reseau/linkedin.svg" alt="icon linkedin" width="22" height="22">
 				</a>
 				<!-- twitch -->
-				<a href="">
+				<a href="https://www.twitch.tv/maakyno">
 					<img src="./img/reseau/twitch.svg" alt="icon twitch" width="22" height="22">
 				</a>
 				</div>
 				</nav>
 			</div>
 				</header>
-				<section class=" section-home backgroundGradient">
+				<section id="home" class=" section-home backgroundGradient">
 					<div class="home max-w padding">
 						<div class="home__info">
 							<h1 class="titel home__info-titel"style="color: var(--txt-primary-color)">
@@ -66,7 +66,7 @@
 								</span>
 							</h1>
 								<p class="home__info-txt paragraph">On vous accompagne de la recherche d’idée à la conception de vos sites web.</p>
-								<a class="btn btn-primary home__btn" href="#"> <p>Voir projets</p> <img src="img/icon/arrowRight.svg" alt=""> </a>
+								<a class="btn btn-primary home__btn" href="#portfolio"> <p>Voir projets</p> <img src="img/icon/arrowRight.svg" alt=""> </a>
 						</div>
 						<div class="home__img">
 							<img src="./img/Illustration.png" alt="Ilustration acceuil" width="141" height="242">
@@ -74,18 +74,24 @@
 					</div>
 				</section>
 				<!-- portfolio -->
-				<section class="backgroundGradient">
-					<div class="portfolio padding">
+				<section id="portfolio" class="backgroundGradient">
+					<div class="portfolio padding max-w" >
 						<h2 class="titelMedium margin-txt" style="color: var(--txt-primary-color)">Réalisations</h2>
 						<div class="portfolio__content">
 							<span>
-								<img src="img/Frame 7.png" alt="" width="289" height="199">
+								<a href="#">
+									<img src="img/Frame 7.png" alt="" width="289" height="199">
+								</a>
 							</span>
 							<span>
-								<img src="img/Frame 7.png" alt="" width="289" height="199">
+								<a href="#">
+									<img src="img/Frame 7.png" alt="" width="289" height="199">
+								</a>
 							</span>
 							<span>
-								<img src="img/Frame 7.png" alt="" width="289" height="199">
+								<a href="#">
+									<img src="img/Frame 7.png" alt="" width="289" height="199">
+								</a>
 							</span>
 						</div>
 						<a href="#" class="btn btn-primary portfolio__btn" style="background-color: var(--background-btn-color);"><p>Voir tout les projets</p> <img src="img/icon/exit.svg" alt="" width="20" height="20"></a>
@@ -112,7 +118,7 @@
 						</div>
 					</div>
 					</section>
-					<section class="backgroundGradient">
+					<section id="services" class="backgroundGradient">
 						<div class=" services padding max-w">
 							<h3 class="titelMedium margin-txt" style="color:var(--txt-primary-color);">Mes services</h3>
 							<div class="services__content">
@@ -146,9 +152,9 @@
 					<!-- methode -->
 					<section class="method">
 					</section>
-					<section>
-						<div class="contact padding">
-							<h2 class="titelMedium margin-txt" style="color: var(--txt-primary-color);">Vous voulez lancer un projet ?</h2>
+					<section id="contact">
+						<div class="contact padding max-w">
+							<h2   class="titelMedium margin-txt" style="color: var(--txt-primary-color);">Vous voulez lancer un projet ?</h2>
 							<form class="contact__form" action="">
 								<div class="contact-input">
 									<p class="paragraph">Nom</p>
@@ -177,10 +183,10 @@
 								<li><a class="links" style="color: var(--txt-primary-color);" href="#">Contact</a></li>
 							</ul>
 							<div class="footer__reseaux">
-								<span><a href="#"><img src="img/reseau/instagram.svg" alt="" width="22" height="22"></a></span>
-								<span><a href="#"><img src="img/reseau/github.svg" alt="" width="22" height="22"></a></span>
-								<span><a href="#"><img src="img/reseau/linkedin.svg" alt="" width="22" height="22"></a></span>
-								<span><a href="#"><img src="img/reseau/twitch.svg" alt="" width="22" height="22"></a></span>
+								<span><a href="https://www.instagram.com/tydevelopper/"><img src="img/reseau/instagram.svg" alt="" width="22" height="22"></a></span>
+								<span><a href="https://github.com/maakino"><img src="img/reseau/github.svg" alt="" width="22" height="22"></a></span>
+								<span><a href="https://www.linkedin.com/in/teddy-equerre-514a781a2/"><img src="img/reseau/linkedin.svg" alt="" width="22" height="22"></a></span>
+								<span><a href="https://www.twitch.tv/maakyno"><img src="img/reseau/twitch.svg" alt="" width="22" height="22"></a></span>
 							</div>
 							<hr class="footer__hr" style="color: var(--border-color);">
 							<p class="footer__copy paragraph">Copyright Equerre Teddy - 2022</p>
