add folder class-utils

--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr">
-
+<html lang="fr" style="scroll-padding-top: 120px;">
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -56,7 +55,7 @@
 				</nav>
 			</div>
 				</header>
-				<section id="home" class=" section-home backgroundGradient">
+				<section id="home"  class=" section-home backgroundGradient">
 					<div class="home max-w padding">
 						<div class="home__info">
 							<h1 class="titel home__info-titel"style="color: var(--txt-primary-color)">
