add workingMethod html and start scss

--- a/index.html
+++ b/index.html
@@ -129,32 +129,46 @@
 
       <section id="portfolio" class="backgroundGradient">
         <h2
-        class="titelMedium margin-txt"
-        style="color: var(--txt-primary-color)"
-      >
-        Portfolio
-      </h2>
+          class="titelMedium margin-txt"
+          style="color: var(--txt-primary-color)"
+        >
+          Portfolio
+        </h2>
         <div class="portfolio padding max-w">
-         
           <div class="portfolio__content">
             <span>
               <a href="#">
-                <img src="img/portfolio/Frame 7.png" alt="" width="289" height="199" />
+                <img
+                  src="img/portfolio/Frame 7.png"
+                  alt=""
+                  width="289"
+                  height="199"
+                />
               </a>
             </span>
             <span>
               <a href="#">
-                <img src="img/portfolio/Frame 7.png" alt="" width="289" height="199" />
+                <img
+                  src="img/portfolio/Frame 7.png"
+                  alt=""
+                  width="289"
+                  height="199"
+                />
               </a>
             </span>
             <span>
               <a href="#">
-                <img src="img/portfolio/Frame 7.png" alt="" width="289" height="199" />
+                <img
+                  src="img/portfolio/Frame 7.png"
+                  alt=""
+                  width="289"
+                  height="199"
+                />
               </a>
             </span>
           </div>
           <a
-            href="#"
+            href="portfolio.html"
             class="btn btn-primary portfolio-btn"
             style="background-color: var(--background-btn-color)"
             ><p>Voir tout les projets</p>
@@ -223,7 +237,6 @@
             Mes services
           </h3>
           <div class="services__content">
-
             <div class="card">
               <div class="card__img primary">
                 <img src="img/icon/dev.svg" alt="" width="60" height="60" />
@@ -288,7 +301,198 @@
         </div>
       </section>
       <!-- methode -->
-      <section class="method"></section>
+      <section>
+        <h2
+          class="titelMedium margin-txt"
+          style="color: var(--txt-primary-color)"
+        >
+          Méthodes de travail
+        </h2>
+        <div class="workingMethod max-w">
+          <div class="column">
+            <div class="card">
+              <div class="card__img primary">
+                <img
+                  src="img/icon/responsive.svg"
+                  alt=""
+                  width="60"
+                  height="60"
+                />
+              </div>
+              <h3 class="card__title titleSmall" style="color: var(--txt-primary-color)">
+                Recherche des besoins
+              </h3>
+              <p
+                class="card-description"
+                style="color: var(--txt-primary-color)"
+              >
+                Recherche des besoins clients afin de commencer le projet.
+              </p>
+            </div>
+            <div class="card">
+              <div class="card__img primary">
+                <img
+                  src="img/icon/responsive.svg"
+                  alt=""
+                  width="60"
+                  height="60"
+                />
+              </div>
+              <h3 class="card__title titleSmall" style="color: var(--txt-primary-color)">
+                Intégration
+              </h3>
+              <p
+                class="card-description"
+                style="color: var(--txt-primary-color)"
+              >
+                Début de l’intégration de la maquette.
+              </p>
+            </div>
+          </div>
+
+          <div class="column column1">
+            <div class="card">
+              <div class="card__img primary">
+                <img
+                  src="img/icon/responsive.svg"
+                  alt=""
+                  width="60"
+                  height="60"
+                />
+              </div>
+              <h3 class="card__title titleSmall" style="color: var(--txt-primary-color)">
+                Conception et design
+              </h3>
+              <p
+                class="card-description"
+                style="color: var(--txt-primary-color)"
+              >
+                Conception et design de la maquette
+              </p>
+            </div>
+            <div class="card">
+              <div class="card__img primary">
+                <img
+                  src="img/icon/responsive.svg"
+                  alt=""
+                  width="60"
+                  height="60"
+                />
+              </div>
+              <h3 class="card__title titleSmall" style="color: var(--txt-primary-color)">
+                Validation du site
+              </h3>
+              <p
+                class="card-description"
+                style="color: var(--txt-primary-color)"
+              >
+                Vérification du site après l'intégration.
+              </p>
+            </div>
+          </div>
+
+          <div class="column column2">
+            <div class="card">
+              <div class="card__img primary">
+                <img
+                  src="img/icon/responsive.svg"
+                  alt=""
+                  width="60"
+                  height="60"
+                />
+              </div>
+              <h3 class="card__title titleSmall" style="color: var(--txt-primary-color)">
+                Validation maquette
+              </h3>
+              <p
+                class="card-description"
+                style="color: var(--txt-primary-color)"
+              >
+                Vérification et modification de la maquette selon les goûts du
+                client.
+              </p>
+            </div>
+            <div class="card">
+              <div class="card__img primary">
+                <img
+                  src="img/icon/responsive.svg"
+                  alt=""
+                  width="60"
+                  height="60"
+                />
+              </div>
+              <h3 class="card__title titleSmall" style="color: var(--txt-primary-color)">
+                Déploiement
+              </h3>
+              <p
+                class="card-description"
+                style="color: var(--txt-primary-color)"
+              >
+                Déploiement du site en ligne.
+              </p>
+            </div>
+          </div>
+          <div class="column column__mobile">
+            <div class="card">
+              <div class="card__img primary">
+                <img
+                  src="img/icon/responsive.svg"
+                  alt=""
+                  width="60"
+                  height="60"
+                />
+              </div>
+              <h3 class="card__title titleSmall" style="color: var(--txt-primary-color)">
+                Recherche des besoins
+              </h3>
+              <p
+                class="card-description"
+                style="color: var(--txt-primary-color)"
+              >
+                Recherche des besoins clients afin de commencer le projet.
+              </p>
+            </div>
+            <div class="card">
+              <div class="card__img primary">
+                <img
+                  src="img/icon/responsive.svg"
+                  alt=""
+                  width="60"
+                  height="60"
+                />
+              </div>
+              <h3 class="card__title titleSmall" style="color: var(--txt-primary-color)">
+                Recherche des besoins
+              </h3>
+              <p
+                class="card-description"
+                style="color: var(--txt-primary-color)"
+              >
+                Recherche des besoins clients afin de commencer le projet.
+              </p>
+            </div>
+            <div class="card">
+              <div class="card__img primary">
+                <img
+                  src="img/icon/responsive.svg"
+                  alt=""
+                  width="60"
+                  height="60"
+                />
+              </div>
+              <h3 class="card__title titleSmall" style="color: var(--txt-primary-color)">
+                Recherche des besoins
+              </h3>
+              <p
+                class="card-description"
+                style="color: var(--txt-primary-color)"
+              >
+                Recherche des besoins clients afin de commencer le projet.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
       <section id="contact">
         <div class="contact padding max-w">
           <h2
