--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             </p>
             <a class="btn btn-primary home__btn" href="#portfolio">
               <p>Voir projets</p>
-              <img src="img/icon/arrowRight.svg" alt="" />
+              <img class="btn__img" src="img/icon/arrowRight.svg" alt="" />
             </a>
           </div>
           <div class="home__img">
@@ -303,46 +303,36 @@
       <!-- methode -->
       <section>
         <h2
-          class="titelMedium margin-txt"
+          class="titelMedium margin-txt workingMethod__tile"
           style="color: var(--txt-primary-color)"
         >
           Méthodes de travail
         </h2>
-        <div class="workingMethod max-w">
+        <div class="workingMethod max-w padding">
           <div class="column">
             <div class="card">
               <div class="card__img primary">
-                <img
-                  src="img/icon/responsive.svg"
-                  alt=""
-                  width="60"
-                  height="60"
-                />
+              <p class="paragraph workingMethod__number">1</p>
               </div>
               <h3 class="card__title titleSmall" style="color: var(--txt-primary-color)">
                 Recherche des besoins
               </h3>
               <p
-                class="card-description"
+                class="card-description paragraph "
                 style="color: var(--txt-primary-color)"
               >
                 Recherche des besoins clients afin de commencer le projet.
               </p>
             </div>
             <div class="card">
-              <div class="card__img primary">
-                <img
-                  src="img/icon/responsive.svg"
-                  alt=""
-                  width="60"
-                  height="60"
-                />
+              <div class="card__img thirdary">
+                <p class="paragraph workingMethod__number">4</p>
               </div>
               <h3 class="card__title titleSmall" style="color: var(--txt-primary-color)">
                 Intégration
               </h3>
               <p
-                class="card-description"
+                class="card-description paragraph"
                 style="color: var(--txt-primary-color)"
               >
                 Début de l’intégration de la maquette.
@@ -352,38 +342,28 @@
 
           <div class="column column1">
             <div class="card">
-              <div class="card__img primary">
-                <img
-                  src="img/icon/responsive.svg"
-                  alt=""
-                  width="60"
-                  height="60"
-                />
+              <div class="card__img secondary">
+                <p class="paragraph workingMethod__number">2</p>
               </div>
               <h3 class="card__title titleSmall" style="color: var(--txt-primary-color)">
                 Conception et design
               </h3>
               <p
-                class="card-description"
+                class="card-description paragraph"
                 style="color: var(--txt-primary-color)"
               >
                 Conception et design de la maquette
               </p>
             </div>
             <div class="card">
-              <div class="card__img primary">
-                <img
-                  src="img/icon/responsive.svg"
-                  alt=""
-                  width="60"
-                  height="60"
-                />
+              <div class="card__img secondary">
+                <p class="paragraph workingMethod__number">5</p>
               </div>
               <h3 class="card__title titleSmall" style="color: var(--txt-primary-color)">
                 Validation du site
               </h3>
               <p
-                class="card-description"
+                class="card-description paragraph"
                 style="color: var(--txt-primary-color)"
               >
                 Vérification du site après l'intégration.
@@ -393,19 +373,14 @@
 
           <div class="column column2">
             <div class="card">
-              <div class="card__img primary">
-                <img
-                  src="img/icon/responsive.svg"
-                  alt=""
-                  width="60"
-                  height="60"
-                />
+              <div class="card__img thirdary">
+                <p class="paragraph workingMethod__number">3</p>
               </div>
               <h3 class="card__title titleSmall" style="color: var(--txt-primary-color)">
                 Validation maquette
               </h3>
               <p
-                class="card-description"
+                class="card-description paragraph"
                 style="color: var(--txt-primary-color)"
               >
                 Vérification et modification de la maquette selon les goûts du
@@ -414,18 +389,13 @@
             </div>
             <div class="card">
               <div class="card__img primary">
-                <img
-                  src="img/icon/responsive.svg"
-                  alt=""
-                  width="60"
-                  height="60"
-                />
+                <p class="paragraph workingMethod__number">6</p>
               </div>
               <h3 class="card__title titleSmall" style="color: var(--txt-primary-color)">
                 Déploiement
               </h3>
               <p
-                class="card-description"
+                class="card-description paragraph"
                 style="color: var(--txt-primary-color)"
               >
                 Déploiement du site en ligne.
@@ -435,18 +405,13 @@
           <div class="column column__mobile">
             <div class="card">
               <div class="card__img primary">
-                <img
-                  src="img/icon/responsive.svg"
-                  alt=""
-                  width="60"
-                  height="60"
-                />
+                <p class="paragraph workingMethod__number">4</p>
               </div>
               <h3 class="card__title titleSmall" style="color: var(--txt-primary-color)">
                 Recherche des besoins
               </h3>
               <p
-                class="card-description"
+                class="card-description paragraph"
                 style="color: var(--txt-primary-color)"
               >
                 Recherche des besoins clients afin de commencer le projet.
@@ -454,18 +419,13 @@
             </div>
             <div class="card">
               <div class="card__img primary">
-                <img
-                  src="img/icon/responsive.svg"
-                  alt=""
-                  width="60"
-                  height="60"
-                />
+                <p class="paragraph workingMethod__number">5</p>
               </div>
               <h3 class="card__title titleSmall" style="color: var(--txt-primary-color)">
                 Recherche des besoins
               </h3>
               <p
-                class="card-description"
+                class="card-description paragraph"
                 style="color: var(--txt-primary-color)"
               >
                 Recherche des besoins clients afin de commencer le projet.
@@ -473,18 +433,28 @@
             </div>
             <div class="card">
               <div class="card__img primary">
-                <img
-                  src="img/icon/responsive.svg"
-                  alt=""
-                  width="60"
-                  height="60"
-                />
+                <p class="paragraph workingMethod__number">5</p>
               </div>
               <h3 class="card__title titleSmall" style="color: var(--txt-primary-color)">
                 Recherche des besoins
               </h3>
               <p
-                class="card-description"
+                class="card-description paragraph"
+                style="color: var(--txt-primary-color)"
+              >
+                Recherche des besoins clients afin de commencer le projet.
+              </p>
+            </div>
+
+            <div class="card">
+              <div class="card__img primary">
+                <p class="paragraph workingMethod__number">6</p>
+              </div>
+              <h3 class="card__title titleSmall" style="color: var(--txt-primary-color)">
+                Recherche des besoins
+              </h3>
+              <p
+                class="card-description paragraph"
                 style="color: var(--txt-primary-color)"
               >
                 Recherche des besoins clients afin de commencer le projet.
